--- a/src/app/application/class/list-class/list-class.component.html
+++ b/src/app/application/class/list-class/list-class.component.html
@@ -4,15 +4,17 @@
             <div class="col-md-12">
                 <div class="card">
                     <div class="card-header card-header-danger">
+                        <div class=row>
                       <div class="col s6">
-                      <h4 class="card-title ">Turmas</h4>
-                        <p class="card-category"> Here is a subtitle for this table</p>
+                        <h4 class="card-title ">Turmas</h4>
+                            <p class="card-category"> Here is a subtitle for this table</p>
                         </div>
                         <div class="col s6">
-                            <a routerLink="/class/add" class="waves-effect waves-light btn right">
+                            <a routerLink="/class/add" class="waves-effect waves-light btn pull-right">
                               <i class="material-icons left" style="margin: -6px 5px !important;
-                              margin-left: -10px !important">add </i> button</a>
+                              margin-left: -10px !important">add </i> Registar</a>
                         </div>
+                    </div>
                     </div>
                     <div class="card-body">
                         <div class="table-responsive">
@@ -50,7 +52,7 @@
                                             {{class.period.name}}
                                         </td>
                                         <td class="text-primary">
-                                                <a [routerLink]="['/class/details/'+class.id]" routerLinkActive="router-link-active"  class="secondary-content"><i class="material-icons">send</i></a>
+                                                <a [routerLink]="['/class/details/'+class.id]" routerLinkActive="router-link-active"  class="secondary-content pull-right"><i class="material-icons">send</i></a>
                                         </td>
                                     </tr>
                                    
