--- a/src/app/application/class/details-class/details-class.component.html
+++ b/src/app/application/class/details-class/details-class.component.html
@@ -8,9 +8,9 @@
               <div class="card-body">
                 <h1>#{{accademiClass.name}}</h1>
                 <p class="card-category">Class</p>
-                <h4 class="card-title">{{accademiClass.grade.number}}ª</h4>
+                <h4 class="card-title">{{accademiClass.grade.number}}ª</h4> 
                 <p class="card-category">Sala</p>
-                <h4 class="card-title">{{accademiClass.room.number}}</h4>
+                <h4 class="card-title">{{accademiClass.room.number}} - ({{accademiClass.students.length}}/{{accademiClass.room.size}})</h4>
                 <p class="card-category">Periodo</p>
                 <h4 class="card-title">{{accademiClass.period.name}}</h4>
               </div>
@@ -60,29 +60,52 @@
       <div class="col-lg-12 col-md-12">
         <div class="card">
           <div class="card-header card-header-warning">
-            <h4 class="card-title">Alunos</h4>
-            <p class="card-category">New employees on 15th September, 2016</p>
+              <div class=row>
+                  <div class="col s6">
+                    <h4 class="card-title ">Alunos</h4>
+                        <p class="card-category"> Here is a subtitle for this table</p>
+                    </div>
+                    <div class="col s6">
+                        <a  [routerLink]="['/student/add/'+accademiClass.id]"  class="waves-effect waves-light btn pull-right">
+                          <i class="material-icons left" style="margin: -6px 5px !important;
+                          margin-left: -10px !important">add </i> Registar</a>
+                    </div>
+                </div>
           </div>
           <div class="card-body table-responsive">
             <table class="table table-hover">
               <thead class="text-warning">
                 <th>Número</th>
                 <th>Nome</th>
+                <th>Genero</th>
                 <th>Aproveitamento</th>
                 <th>Finaças</th>
                 <th></th>
               </thead>
               <tbody>
-                <tr>
-                  <td>1092</td>
-                  <td>Dakota Rice</td>
-                  <td>17,78</td>
-                  <td>98%</td>
-                  <td class="text-primary">
-                    <a href="#" routerLinkActive="router-link-active" class="secondary-content"><i
-                        class="material-icons">send</i></a>
-                  </td>
-                </tr>
+                  <tbody *ngFor="let student of accademiClass.students">                   
+                      <tr>
+                          <td>
+                              {{student.code}}
+                          </td>
+                          <td>
+                              {{student.person.firstName}} 
+                              {{student.person.middleName}} 
+                              {{student.person.lastName}}
+                          </td>
+                          <td>
+                              {{student.person.sex.name}}
+                          </td>
+                          <td>
+                              89%
+                          </td>
+                          <td>
+                              92%
+                          </td>
+                          <td class="text-primary">
+                                  <a [routerLink]="['/student/details/'+student.id]" routerLinkActive="router-link-active"  class="secondary-content pull-right"><i class="material-icons">send</i></a>
+                          </td>
+                      </tr>
               </tbody>
             </table>
           </div>
