--- a/src/app/application/class/add-class/add-class.component.html
+++ b/src/app/application/class/add-class/add-class.component.html
@@ -138,6 +138,7 @@
                           <mat-step [stepControl]="secondFormGroup" optional>
                               <form [formGroup]="secondFormGroup">
                                   <ng-template matStepLabel>Fill out your address</ng-template>
+                                  <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Modal</button>
                                   <mat-form-field>
                                       <input matInput placeholder="Address" formControlName="secondCtrl" required>
                                   </mat-form-field>
@@ -162,4 +163,24 @@
 
         </div>
     </div>
+</div>
+
+<div id="myModal" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Modal Header</h4>
+      </div>
+      <div class="modal-body">
+        <p>Some text in the modal.</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+
+  </div>
 </div>
